--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h3>September</h3>
-    <p>
+    <p class="gallery-item">
         Undertaken in Melbourne, Victoria throughout the month of September, I delve into the bleak and desolate aspects of urban life. These images were taken spontaneously, without any predetermined plans, to capture the unvarnished reality of the city.
 
 I aim to narrate a point-and-shoot story of Melbourne that is often obscured by the glossy facade of urban life. These photographs reveal the forgotten, abandoned, and desolate corners and individuals of the city, painting a picture of isolation and decay that is frequently concealed. These visuals stand as a stark commentary on the inevitable decay and decline that urban environments can experience.
