--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Gallery</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h3>September</h3>
-    <p class="gallery-item">
-        Undertaken in Melbourne, Victoria throughout the month of September, I delve into the bleak and desolate aspects of urban life. These images were taken spontaneously, without any predetermined plans, to capture the unvarnished reality of the city.
 
-I aim to narrate a point-and-shoot story of Melbourne that is often obscured by the glossy facade of urban life. These photographs reveal the forgotten, abandoned, and desolate corners and individuals of the city, painting a picture of isolation and decay that is frequently concealed. These visuals stand as a stark commentary on the inevitable decay and decline that urban environments can experience.
-    </p>
     <div class="gallery">
+        <div class="gallery-item">
+            <p class="gallery-item">
+                Undertaken in Melbourne, Victoria throughout the month of September, I delve into the bleak and desolate
+                aspects of urban life. These images were taken spontaneously, without any predetermined plans, to
+                capture the unvarnished reality of the city.
+
+                I aim to narrate a point-and-shoot story of Melbourne that is often obscured by the glossy facade of
+                urban life. These photographs reveal the forgotten, abandoned, and desolate corners and individuals of
+                the city, painting a picture of isolation and decay that is frequently concealed. These visuals stand as
+                a stark commentary on the inevitable decay and decline that urban environments can experience.
+            </p>
+        </div>
         <div class="gallery-item">
             <img src="img/20230818-IMG_0114-Enhanced-NR.jpg" alt="Photo 0">
         </div>
@@ -29,7 +39,7 @@ I aim to narrate a point-and-shoot story of Melbourne that is often obscured by 
         <div class="gallery-item">
             <img src="img/20230918-IMG_0307.jpg" alt="Photo 4">
         </div>
-        
+
         <div class="gallery-item">
             <img src="img/20231006-IMG_0357.jpg" alt="Photo 5">
         </div>
@@ -38,4 +48,5 @@ I aim to narrate a point-and-shoot story of Melbourne that is often obscured by 
             <img src="img/20231008-IMG_0539.jpg" alt="Photo 6">
         </div>
 </body>
+
 </html>
