--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
                 I aim to narrate a point-and-shoot story of Melbourne that is often obscured by the glossy facade of
                 urban life. These photographs reveal the forgotten, abandoned, and desolate corners of individuals and
-                the city, painting a picture of isolation and decay that is frequently concealed. These visuals stand as
+                the city, painting a picture of isolation and decay that is often frequently concealed. These visuals stand as
                 a stark commentary on the inevitable decay and decline that urban environments and individuals can experience.
             </p>
         </div>
@@ -36,10 +36,7 @@
         <div class="gallery-item">
             <img src="img/20230918-IMG_0275.jpg" alt="Photo 3">
         </div>
-        <div class="gallery-item">
-            <img src="img/20230918-IMG_0307.jpg" alt="Photo 4">
-        </div>
-
+        
         <div class="gallery-item">
             <img src="img/20231006-IMG_0357.jpg" alt="Photo 5">
         </div>
