--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,7 @@
                 capture the unvarnished reality of the city.
 
                 I aim to narrate a point-and-shoot story of Melbourne that is often obscured by the glossy facade of
-                urban life. These photographs reveal the forgotten, abandoned, and desolate corners of individuals and
-                the city, painting a picture of isolation and decay that is often frequently concealed. These visuals stand as
+                urban life. These photographs reveal the forgotten, abandoned, and desolate corners of the city and individuals, painting a picture of isolation and decay that is often frequently concealed. These visuals stand as
                 a stark commentary on the inevitable decay and decline that urban environments and individuals can experience.
             </p>
         </div>
